--- a/css/style.css
+++ b/css/style.css
@@ -5,15 +5,206 @@
 --Very_Dark_Blue: hsl(229, 57%, 11%);
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-size: 14px;
+    font-family: 'Raleway', sans-serif;
 }
 
 body {
     background-color: var(--Very_Dark_Blue);
     color: var(--Pale_Blue);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+.container {
+    display: flex;
+    margin: 0 auto;
+    flex-wrap: wrap;
+}
+
+.bg {
+    background: url(../images/bg-desktop.png) center center no-repeat;
+    position: absolute;
+    background-size: cover;
+    height: 50vh;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
+}
+
+.left-side {
+    margin-right: 38px;
+}
+
+.box {
+    background-color: var(--Dark_Blue);
+    height: 100%;
+    padding: 40px;
+    border-radius: 10px 100px 10px 10px;
+}
+
+.buttons {
+    height: 50px;
+    display: flex;
+}
+
+.logo {
+    margin-bottom: 20px;
+}
+
+.buttons .btn{
+    height: 100%;
+    width: 50px;
+    padding: 15px;
+    background-color: var(--Very_Dark_Blue);
+    margin-right: 15px;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.buttons .btn:hover {
+    border: var(--Grayish_Blue) solid 1px;
+}
+
+
+/* RIGHT SIDE */
+
+.right-side {
+    position: relative;
+    min-width: 537px;
+}
+
+.right-box {
+    background-color: var(--Dark_Blue);
+    padding: 38px;
+    width: 100%;
+    height: 154px;
+    border-radius: 10px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+
+.bar {
+    background-color: var(--Very_Dark_Blue);
+    height: 18px;
+    width: 100%;
+    border-radius: 15px;
+    overflow: hidden;
+    padding: 2px;
+    margin: 10px 0;
+}
+
+.fill-bar {
+    height: 100%;
+    width: 81.5%;
+    border-radius: 15px;
+    background: linear-gradient(90deg, hsl(6, 100%, 80%), hsl(335, 100%, 65%));
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.fill-bar::before {
+    content: "";
+    height: 10px;
+    width: 10px;
+    border-radius: 10px;
+    background-color: white;
+    margin-right: 2px;
+}
+
+p.right, p.left {
+    display: inline;
+    font-size: 0.9rem;
+    font-weight: 600;
+}
+
+p.right {
+    float: right;
+}
+
+.storage-left {
+    background-color: white;
+    position: absolute;
+    right: 40px;
+    top: 0;
+    z-index: 1;
+    width: 180px;
+    height: 70px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--Grayish_Blue);
+    font-weight: 700;
+    border-radius: 10px 10px 0px 10px;
+}
+
+.storage-left::before {
+    content: "";
+    background-color: white;
+    height: 20px;
+    width: 20px;
+    position: absolute;
+    bottom: -20px;
+    right: 0;
+    clip-path: polygon(100% 100%, 0 0, 100% 0);
+}
+
+.storage-left strong {
+    font-size: 3rem;
+    color: black;
+}  
+
+
+
+@media(max-width: 800px) {
+    .bg {
+        background: url(../images/bg-mobile.png) center center no-repeat;
+        height: 100vh;
+        background-size: cover;
+    }
+
+    .left-side {
+        margin-right: 0;
+    }
+
+    .container {
+        flex-direction: column;
+    }
+
+    .right-side {
+        margin-top: 20px;
+        min-width: 100%;
+        min-height: 200px;
+    }
+
+    .right-box {
+        top: 0;
+    }
+
+    .storage-left {
+        position: absolute;
+        bottom: 0;
+        left: calc(50% - 80px);
+        top: unset;
+        border-radius: 10px;
+    }
+
+    .storage-left::before {
+        display: none;
+    }
+
 }
